[package]
authors = ["easymikey <mikhail.avdeev@vk.team>"]
edition = "2021"
name = "lxc-tool"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
clap = {version = "4.0", features = ["derive"]}
reqwest = { version = "0.11.14", features = ["blocking"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9"
slog = "2.7"
slog-envlogger = "2.2"
slog-scope = "4.4"
slog-syslog = {path = "custom-vendored/slog-syslog"}
tempfile = "3.4.0"
url = "2.3.1"
wait-timeout = "0.2.0"

