[package]
authors = ["easymikey <mikhail.avdeev@vk.team>"]
edition = "2021"
name = "lxc-tool"
version = "0.1.2"

[profile.release]
lto = true
strip = true

[dependencies]
anyhow = "1.0"
clap = {version = "4.0", features = ["derive"]}
futures-util = "0.3.14"
reqwest = { version = "0.11.4", features = ["stream"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9"
slog = "2.7"
slog-envlogger = "2.2"
slog-scope = "4.4"
slog-syslog = {path = "custom-vendored/slog-syslog"}
tempfile = "3.4.0"
url = { version = "2.3.1", features = ["serde"] }
wait-timeout = "0.2.0"
tokio = { version = "1.13.0", features = ["full"] }
indicatif = "0.17.3"
walkdir = "2.3.3"
pwd = "1.4.0"
nix = "0.26.2"

[dev-dependencies]
proptest-derive = "0.3.0"
proptest = "1.1.0"
